--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!--首页-->
+    <string name="home_exit">再按一次退出</string>
+    <!--登录页-->
+    <string name="login_username">请输入用户名</string>
+    <string name="login_password">密码6～10位</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
 </resources>
